####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = peng
peng_SOURCES = threadELV3.cpp nulldriver.cpp modemdriver.cpp kernel30.cpp globals.cpp cvjcompress.cpp cusermanager.cpp ctuntapdriver.cpp ctextlinux.cpp ctcpipheader.cpp crouteurlinux.cpp crouteur.cpp cppptools.cpp cppp.cpp cparamconfig.cpp cmsgerror.cpp cloader.cpp ckernel.cpp ciptools.cpp cgui.cpp ccrypto.cpp cconfig.cpp ccommand.cpp cclienttoaol30.cpp caoltoclient30.cpp caolheader30.cpp caolcmd30.cpp caim.cpp CableDriver.cpp main.cpp 
peng_LDADD   = -lstdc++ -lpthread


EXTRA_DIST = main.cpp CableDriver.cpp CableDriver.h caim.cpp caim.h caolcmd30.cpp caolcmd30.h caolheader30.cpp caolheader30.h caoltoclient30.cpp caoltoclient30.h cclienttoaol30.cpp cclienttoaol30.h ccommand.cpp ccommand.h cconfig.cpp cconfig.h ccrypto.cpp ccrypto.h cgui.cpp cgui.h ciptools.cpp ciptools.h ckernel.cpp ckernel.h cloader.cpp cloader.h cmsgerror.cpp cmsgerror.h cparamconfig.cpp cparamconfig.h cppp.cpp cppp.h cppptools.cpp cppptools.h crouteur.cpp crouteur.h crouteurlinux.cpp crouteurlinux.h ctcpipheader.cpp ctcpipheader.h ctextlinux.cpp ctextlinux.h ctuntapdriver.cpp ctuntapdriver.h cusermanager.cpp cusermanager.h cvjcompress.cpp cvjcompress.h globals.cpp globals.h kernel30.cpp kernel30.h linuxconf.h main.h modemdriver.cpp modemdriver.h nulldriver.cpp nulldriver.h threadELV3.cpp threadELV3.h type.h vjcompress.h 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = peng

# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
peng_LDFLAGS = $(all_libraries) 
                                                                                
