#
# Copyright (c) 2002-2003  Jean-Charles Salzeber <jc@varspool.net>
#
# This file is part of penggy program.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA.
#
# Nicolas Burrus <nes@lrde.epita.fr>, 2002
#
# $Id$
#


noinst_HEADERS = 	access.h	\
			checkopt.h	\
			engine.h	\
			if.h		\
			misc.h		\
			protocol.h	\
			sighndl.h	\
			window.h	\
			buffer.h	\
			common.h	\
			fdo.h		\
			log.h		\
			options.h	\
			getpass.h	\
			resolver.h	\
			stream.h	\
			utils.h

SUBDIRS = fdo iptunnel modem cable dsl tcpip tun p3 flap
DISTCLEANFILES = gettext.h getopt.h libintl.h
