#
# Copyright (c) 2002-2003  Jean-Charles Salzeber <jc@varspool.net>
#
# This file is part of penggy program.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA.
#
# $Id$
#

chatdir = ${pkgdatadir}/chat
confdir = ${sysconfdir}/${PACKAGE}

dist_chat_DATA = aolnet.scm global.scm global2.scm csnet.scm
dist_conf_DATA = penggy.cfg aol-secrets phonetab
dist_conf_SCRIPTS = ip-up ip-down
